Fixed path to level files so it willl work on all file systems